src/test/ui/issues/issue-7364.stderr
error[E0010]: allocations are not allowed in statics
  --> $DIR/issue-7364.rs:6:37
   |
LL | static boxed: Box<RefCell<isize>> = box RefCell::new(0);
   |                                     ^^^^^^^^^^^^^^^^^^^ allocation not allowed in statics

error[E0277]: `std::cell::RefCell<isize>` cannot be shared between threads safely
  --> $DIR/issue-7364.rs:6:1
   |
LL | static boxed: Box<RefCell<isize>> = box RefCell::new(0);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `std::cell::RefCell<isize>` cannot be shared between threads safely
   |
   = help: the trait `std::marker::Sync` is not implemented for `std::cell::RefCell<isize>`
   = note: required because of the requirements on the impl of `std::marker::Sync` for `std::ptr::Unique<std::cell::RefCell<isize>>`
   = note: required because it appears within the type `std::boxed::Box<std::cell::RefCell<isize>>`
   = note: shared static variables must have a type that implements `Sync`

error: aborting due to 2 previous errors

Some errors occurred: E0010, E0277.
For more information about an error, try `rustc --explain E0010`.
